# godot-cardano

./: .gitignore  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Procfile  README.md  SECURITY.md  SUPPORT.md  build.sh  flake.nix  gdscript-docs-maker.nix  godot-bin.nix  index.html  plutip-test.nix  sitemap.xml
.github/workflows/: build.yaml  release.yaml  test.yaml
Shop Tutorial/: index.html
csl_demo/: BigInt.gd  BlockfrostProvider.gd  Cardano.gd  PrivateKeyAccount.gd  Provider.gd  TxBuilder.gd  Wallet.gd  abstract.gd  blockfrost_provider.gd  cardano.gd  export_presets.cfg  main.gd  main.tscn  project.godot  provider.gd  tx.gd  tx_complete.gd
demo/: city_token_00.tres  example_datum.gd  icon.svg.import  main.gd  main.tscn  project.godot  provider.gd  wallet.gd
docs/: Shop Tutorial.md  default.nix  extra.css  mkdocs.yml
gdextension/: SConstruct
gdextension/libcsl/: Cargo.toml  libcsl.h  main.cpp
gdextension/src/: gdexample.cpp  gdexample.h  register_types.cpp
libcsl_godot/: Cargo.toml  WEB-EXPORT.md  result
libcsl_godot/src/: bigint.rs  cip_30_sign.rs  cip_8_sign.rs  gdutils.rs  gresult.rs  lib.rs  plutus.rs  wallet.rs
libcsl_godot/src/ledger/: transaction.rs
nix/: devshell.nix  godot-bin.nix  godot-cardano.nix  private-testnet.nix
paima-demo/: .env.localhost.godot  .gitignore  Makefile  README.md  flake.nix
paima-demo/godot-cip-30-frontend/: buttons.gd  cip_30_callbacks.gd  main.gd  (+10 more)
scripts/: aiken.toml  plutus.json
search/: search_index.json
shop-demo/: bag.png.import  big_int_node.gd  confirm_button.gd  icon.svg.import  inventory_debug.tscn  inventory_item.gd  inventory_item.tscn  item.gd  mint_shop_items.tscn  project.godot  scripts.json  shop.gd  shop.tscn  shop_item.gd  shop_item.tscn  user_message.gd  user_message.tscn  wallet_singleton.gd
test/: .gutconfig.json  example_datum.gd  main.gd  main.tscn  preview_token.txt  project.godot  test.gd  test_data.json
(+172 files in other folders)
