[package]
name = "csl_godot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# godot = { git = "https://github.com/godot-rust/gdext", rev = "7dee976484db8fc756a2442a9edebcaf48f2b677" }
godot = { git = "https://github.com/godot-rust/gdext", rev = "4ce4714b8871bf75e95d03401e44e3f1ccbdd7df" }
uplc = { git = "https://github.com/aiken-lang/aiken", rev = "b50e4ab63aa35d8fd8b6c683460b312173ace0a2" }
cardano-serialization-lib = "11.5.0"
bip32 = "0.5.1"
hex = "0.4.0"
pkcs5 = {version = "0.7.1", features = ["pbes2", "alloc"]}
scrypt = "0.11.0"
cbor_event = "2.1.3"
